added the working code

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,13 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../static/css/output.css" rel="stylesheet">
     <title>Login</title>
+    <link href="../static/css/output.css" rel="stylesheet">
 </head>
 <body>
-
+<h2 class="text-3xl font-bold underline">Login Page</h2>
+<a href="/login">Login with OAuth Provider</a>
 </body>
 </html>
