--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url("static/images/bg.jpg") no-repeat center center fixed;
+            background: url("../static/images/background.jpg") no-repeat center center fixed;
             background-size: cover;
             margin: 0; /* Resets default margin */
             padding: 0; /* Resets default padding */
