--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="../static/css/output.css" rel="stylesheet">
+    <link rel="icon" href="/static/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
-<h2 class="text-3xl font-bold underline">Login Page</h2>
-<a href="/login">Login with OAuth Provider</a>
+<div class="flex h-screen w-full items-center justify-center bg-gray-900 bg-cover bg-no-repeat" style="background-image: url('static/images/background.png');">
+    <div class="rounded-3xl bg-gray-800 bg-opacity-40 px-24 py-24 shadow-lg backdrop-blur-md">
+        <div class="text-white">
+            <div class="mb-8 flex flex-col items-center">
+                <img src="../static/images/vk.png" width="150" alt="" srcset="" />
+                <h1 class="mb-2 text-2xl  pl-6 py-9 font-mono  ">Video Conversion Service</h1>
+                <ul class="mb-2 font-mono py-2 text-center">
+                    <li class="text-sm indent-2"> This service let's you convert your video to a standard mp4 format</li>
+                </ul>
+                <ul class="mb-2 font-mono py-2 text-center">
+                    <li class="text-sm indent-2"> To continue further please login using VK ID</li>
+                </ul>
+                <a href="/login" class="mt-8 font-mono text-white bg-gray-800 bg-opacity-40 hover:bg-blue-700 border border-gray-200 focus:ring-2 focus:outline-none focus:ring-gray-100 font-sans rounded-full text-md px-10 py-2 text-center inline-flex items-center">
+                    Login using
+                    <svg class="h-8 w-10 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 73 36">
+                        <path fill="currentColor" d="M45 29.5h3.5v-22H45v22Zm8.3 0h8.4c6.6 0 11.3-4.6 11.3-11s-4.7-11-11.3-11h-8.4v22Zm3.7-3.4V10.9h4.7c4.4 0 7.5 3.1 7.5 7.6s-3 7.6-7.5 7.6H57Z"></path>
+                        <path fill="#0077FF" d="M0 17.3C0 9 0 5 2.5 2.5 5.1 0 9.1 0 17.3 0h1.4C27 0 31 0 33.5 2.5 36 5.1 36 9.1 36 17.3v1.4c0 8.2 0 12.2-2.5 14.8C30.9 36 26.9 36 18.7 36h-1.4C9 36 5 36 2.5 33.5 0 30.9 0 26.9 0 18.7v-1.4Z"></path>
+                        <path fill="#FFFFFF" d="M19.3 26c-8.1 0-13-5.6-13.2-15h4c.2 6.9 3.4 9.8 5.8 10.4V11h3.9v6c2.3-.3 4.7-3 5.5-6h4c-.7 3.7-3.3 6.4-5.2 7.5 1.9.9 4.9 3.2 6 7.5H26c-1-2.9-3.1-5-6.1-5.4V26h-.5Z"></path>
+                    </svg>
+                </a>
+
+
+            </div>
+
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
