--- a/templates/login.html
+++ b/templates/login.html
@@ -13,14 +13,14 @@
             <div class="text-white VK-Sans">
                 <div class="mb-4 sm:mb-8 flex flex-col items-center">
                     <img src="../static/images/vk.png" class="w-24 sm:w-32 md:w-40" alt="" />
-                    <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl pl-6 py-4 sm:py-6 md:py-9 VK-Sans">Video Conversion Service</h1>
+                    <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl text-center py-4 sm:py-6 md:py-9 VK-Sans">Video Conversion Service</h1>
                     <ul class="mb-2 ml-2 VK-Sans text-center">
                         <li class="text-xs sm:text-sm indent-2"> This service lets you edit/convert/crop your video</li>
                     </ul>
                     <ul class="mt-2 mb-2 VK-Sans py-2 text-center">
                         <li class="text-xs sm:text-sm indent-2"> To continue further please login using VK ID</li>
                     </ul>
-                    <a href="/login" class="mt-4 sm:mt-8 VK-Sans text-white bg-gray-800 bg-opacity-40 hover:bg-blue-700 border border-gray-200 focus:ring-2 focus:outline-none focus:ring-gray-100 font-sans rounded-full text-sm sm:text-md px-5 sm:px-10 py-2 text-center inline-flex items-center">
+                    <a href="/login" class="mt-4 sm:mt-8 VK-Sans text-white bg-gray-800 text-center bg-opacity-40 hover:bg-blue-700 border border-gray-200 focus:ring-2 focus:outline-none focus:ring-gray-100 font-sans rounded-full text-sm sm:text-md px-5 sm:px-10 py-2 text-center inline-flex items-center">
                         Login using
                         <svg class="h-6 w-8 sm:h-8 sm:w-10 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 73 36">
                             <path fill="currentColor" d="M45 29.5h3.5v-22H45v22Zm8.3 0h8.4c6.6 0 11.3-4.6 11.3-11s-4.7-11-11.3-11h-8.4v22Zm3.7-3.4V10.9h4.7c4.4 0 7.5 3.1 7.5 7.6s-3 7.6-7.5 7.6H57Z"></path>
