--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,62 +7,101 @@
     <title>Dashboard</title>
     <link href="../static/css/output.css" rel="stylesheet">
     <link rel="icon" href="/static/favicon/favicon.ico" type="image/x-icon">
+
+    <script>
+        // document.addEventListener('DOMContentLoaded', () => {
+        //     const button = document.querySelector('.group button');
+        //     const dropdown = document.getElementById('dropdown');
+        //     const overlay = document.getElementById('overlay');
+        //
+        //     button.addEventListener('click', function() {
+        //         dropdown.classList.toggle('opacity-0');
+        //         overlay.classList.toggle('hidden');
+        //         button.classList.toggle('border-white');
+        //         button.classList.toggle('border-gray-600');
+        //     });
+        //
+        //     overlay.addEventListener('click', function() {
+        //         dropdown.classList.add('opacity-0');
+        //         overlay.classList.add('hidden');
+        //         button.classList.remove('border-white');
+        //         button.classList.add('border-gray-600');
+        //     });
+        // });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            console.log("DOM fully loaded and parsed");
+
+            const button = document.querySelector('.group button');
+            const dropdown = document.getElementById('dropdown');
+            const overlay = document.getElementById('overlay');
+
+            console.log(button, dropdown, overlay); // Check if elements are correctly selected
+
+            button.addEventListener('click', function() {
+                console.log("Button clicked");
+                dropdown.classList.toggle('opacity-0');
+                overlay.classList.toggle('hidden');
+            });
+
+            overlay.addEventListener('click', function() {
+                console.log("Overlay clicked");
+                dropdown.classList.add('opacity-0');
+                overlay.classList.add('hidden');
+            });
+
+        });
+
+
+    </script>
+
 </head>
 <body class="m-0">
-<div class=" h-screen w-full bg-cover bg-no-repeat" style="background-image: url('static/images/background.png');">
+<div class="h-screen w-screen bg-cover bg-no-repeat " style="background-image: url('static/images/background.png');">
+<!--    Navbar-->
+    <nav class="relative container mx-auto bg-gray-800 bg-opacity-40 rounded-3xl shadow-2xl p-2">
+           <div class="flex justify-between items-center">
 
-    <nav class=" bg-gray-800 bg-opacity-30 rounded-3xl shadow-lg py-2 text-white h-22">
-        <div class="max-w-7xl  mx-auto px-10 ">
-           <div class="flex items-center justify-between flex-grow">
-               <div>
+               <div class="lg:visible">
                    <a href="/dashboard">
-                       <img class="absolute left-20 top-0 py-2 mt-1 mb-1 rounded-xl size-14 " src="../static/assets/VK.svg">
+                       <img class=" p-2 size-14 " src="../static/assets/VK.svg">
                    </a>
                </div>
+           <div class="hidden lg:flex space-x-20">
+                    <a href="/convert" class=" mt-1 mb-1  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 VK-Sans text-white bg-gray-800 bg-opacity-20  border border-gray-200 rounded-full text-md px-10 py-2 text-center inline-flex items-center">
+                        Convert
+                    </a>
 
-                    <div> <a href="/convert" class=" mt-1 mb-1  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 VK-Sans text-white bg-gray-800 bg-opacity-20  border border-gray-200 rounded-full text-md px-10 py-2 text-center inline-flex items-center">
-                       Convert
-
-                        </a>
-                    </div>
-                   <div> <a href="/cut" class=" mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
-                      Cut
-                   </a></div>
+                    <a href="/cut" class=" mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
+                        Cut
+                    </a>
 
 
-               <div>
-                   <a href="/watermark" class=" mt-1 mb-1 VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200   rounded-full text-md px-10 py-2 text-center inline-flex items-center">
-                      Watermark
-                   </a>
-               </div>
-               <div>
-                   <a href="/extract" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
-                       Extract
-                   </a>
-               </div>
+                    <a href="/watermark" class=" mt-1 mb-1 VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200   rounded-full text-md px-10 py-2 text-center inline-flex items-center">
+                        Watermark
+                    </a>
 
-               <div class="group  inline-block absolute right-20">
-                   <button class="block h-11 w-11 rounded-full overflow-hidden border-2 border-gray-600   focus:border-white">
+
+                    <a href="/extract" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
+                        Extract
+                    </a>
+                </div>
+
+               <div class="group hidden lg:block">
+                   <button class="block h-11 w-11 z-10 rounded-full overflow-hidden border-2 border-gray-600 focus:border-white">
                        <img class="h-full w-full object-cover" src="{{.userpicture}}">
                    </button>
+                   <button id="overlay" class="hidden fixed z-10 inset-0 bg-gray-800 bg-opacity-20 backdrop-blur-sm"></button>
+                   <div id="dropdown" class="absolute mt-1 right-0 opacity-0 z-10 transition-opacity duration-300 bg-gray-800 bg-opacity-40 border border-gray-200 rounded-3xl shadow-2xl">
+                       <a href="/profile" class="block px-6 py-2 text-center transition-opacity duration-300 hover:text-white VK-Sans pointer-events-none pointer-events-auto bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 rounded-t-3xl shadow-2xl">Profile</a>
+                       <a href="/signout" class="block px-6 py-2 text-center transition-opacity duration-300 hover:text-white VK-Sans pointer-events-none group-hover:pointer-events-auto bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 rounded-b-3xl shadow-2xl">Sign Out</a>
 
-                   <div class="absolute right-0 mt-2 w-36 opacity-0 group-hover:opacity-100 btransition-opacity duration-300 bg-gray-800 bg-opacity-40 border border-gray-200 bg-gradient-to-r from-blue-600 to-purple-500 rounded-3xl shadow-xl">
-                       <a href="/signout" class="ml-3 block px-6 py-2 VK-Sans pointer-events-none group-hover:pointer-events-auto">Sign Out</a>
                    </div>
+
                </div>
-
-
-
            </div>
-
-
-
-
-
-
-        </div>
     </nav>
-<!--      с-->
+
 </div>
 
 </body>
