--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="flex h-screen w-screen items-center justify-center  bg-gray-900 bg-cover bg-no-repeat" style="background-image: url('static/images/background.png');">
+    <div class="flex h-screen w-screen items-center justify-center  bg-gray-900 bg-cover bg-no-repeat" style="background-image: url('../static/images/background.png');">
         <div class="rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-4  sm:px-10 sm:mb-8 sm:py-10 md:px-24 md:py-24 shadow-2xl backdrop-blur-md">
             <div class="text-white VK-Sans">
                 <div class="mb-4 sm:mb-8 flex flex-col items-center">
