--- a/templates/convert.html
+++ b/templates/convert.html
@@ -23,8 +23,35 @@
                 overlay.classList.add('hidden');
             });
 
+            const fileInput = document.getElementById('dropzone-file');
+            const errorMessage = document.getElementById('error-message');
+
+            fileInput.addEventListener('change', function() {
+                const file = this.files[0];
+                if (file && file.type === 'video/mp4') {
+                    errorMessage.classList.add('hidden');
+                } else {
+                    errorMessage.classList.remove('hidden');
+                    this.value = ''; // Clear the file input
+                }
+            });
+
+            document.getElementById('dropzone-file').addEventListener('change', function() {
+                var fileNameDisplay = document.getElementById('file-name');
+                if (this.files.length > 0) {
+                    // Display the file name if a file is selected
+                    fileNameDisplay.textContent = this.files[0].name;
+                } else {
+                    // Reset the text if no file is selected
+                    fileNameDisplay.textContent = 'No file chosen';
+                }
+            });
+
         });
+
+
     </script>
+
 
 </head>
 <body>
@@ -59,8 +86,8 @@
                 </a>
 
 
-                <a href="/extract" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
-                    Extract
+                <a href="/screenshot" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
+                    Screenshot
                 </a>
 
             </div>
@@ -72,11 +99,11 @@
                     </button>
                     <button id="overlay" class="hidden fixed z-10 inset-0 bg-gray-800 bg-opacity-20 backdrop-blur-sm"></button>
                     <div id="dropdown" class="absolute mt-1 right-0 opacity-0 z-10 transition-opacity duration-300 bg-gray-800 bg-opacity-40 border border-gray-200 rounded-3xl shadow-2xl">
-                        <p class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white bg-gradient-to-r from-blue-600 to-purple-500 VK-Sans rounded-t-3xl shadow-2xl">Привет, {{.userName}}!</p>
+                        <p class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white bg-gradient-to-r from-blue-600 to-purple-500 VK-Sans rounded-t-3xl shadow-2xl">Привет,  <span class=" font-extrabold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">{{.userName}}!</span></p>
                         <a href="/convert" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Convert</a>
                         <a href="/cut" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Cut</a>
                         <a href="/watermark" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Watermark</a>
-                        <a href="/extract" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Extract</a>
+                        <a href="/screenshot" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Screenshot</a>
                         <a href="/profile" class="block px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 lg:rounded-t-3xl shadow-2xl">Profile</a>
                         <a href="/signout" class="block px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 rounded-b-3xl shadow-2xl">Sign Out</a>
                     </div>
@@ -90,36 +117,50 @@
 
 
     </nav>
+
     <div class="flex justify-center items-center h-full w-full">
-        <div class="rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-4  sm:px-10 sm:mb-8 sm:py-10 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
-            <div class="text-white VK-Sans">
-                <div class="mb-4 sm:mb-8 flex flex-col items-center">
-                    <img src="../static/assets/diggy.webp" class="w-24 sm:w-32 md:w-40" alt="" />
-                    <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl text-center py-4 sm:py-6 md:py-9 VK-Sans">Convert Page</h1>
-                    <ul class="mb-2 ml-2 VK-Sans text-center">
-                        <li class="text-xs sm:text-sm indent-2">Очень рад видеть тебя здесь, {{.userName}}</li>
-                    </ul>
+        <div class="mt-3 rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-4 sm:px-10 sm:mb-8 sm:py-10 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
+            <div class="text-white text-center VK-Sans">
+                <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl mb-8">Конвертировать видео</h1>
+                <div class="mb-4 sm:mb-8 flex flex-col sm:flex-row items-center justify-between">
+                    <div class="flex flex-col items-center justify-end mb-4 sm:mb-0">
+                        <form action="/convert" method="post" enctype="multipart/form-data" class="flex flex-col items-center justify-center w-full">
+                            <label for="dropzone-file" class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-600 bg-gray-800 bg-opacity-20 border-dashed rounded-lg cursor-pointer">
+                                <div class="flex flex-col items-center justify-center pt-5 pb-6">
+                                    <svg class="w-8 h-8 mb-4 text-white " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"/>
+                                    </svg>
+                                    <p class="mb-2 text-sm text-white bg-opacity-40 "><span class="font-semibold ">Нажми или перетащи сюда</span>, чтобы загрузить</p>
+                                    <p class="text-xs ">MP4 (не более. 20MB)</p>
+                                </div>
+                                <input id="dropzone-file" type="file" name="file" class="hidden" />
+                                <p id="file-name" class="text-sm  mt-2">Файл не выбран</p>
+                            </label>
 
-                    <ul class="mt-2 ml-2 VK-Sans text-center">
-                        <li class="text-xs sm:text-sm indent-2">Эта веб-страница находится на этапе разработки</li>
-                    </ul>
+                            <div id="error-message" class="hidden text-red-500 text-sm">Пожалуйста, выберите формат файла MP4</div>
 
-                    <ul class="mt-2 mb-2 VK-Sans py-2 text-center">
-                        <li class="text-xs sm:text-sm indent-2"> Нажми на кнопку, чтобы перейти на главную страницу</li>
-                    </ul>
+                            <div class="text-white mt-4 ">
+                                <p >Выбери формат файла, в который вы хочешь преобразовать</p>
+                                <select name="output_format" class="mt-4 bg-gray-800 rounded-full bg-opacity-40 text-white border border-gray-300  py-2 px-4">
+                                    <option value="" disabled selected>Формат выходного файла</option>
+                                    <option value="mkv">Mkv</option>
+                                    <option value="mov">Mov</option>
+                                    <option value="ogg">Ogg</option>
+                                </select>
+                            </div>
 
-                    <a href="/dashboard" class="mt-4 sm:mt-8 VK-Sans text-white bg-gray-800 text-center bg-opacity-40 hover:bg-blue-700 border border-gray-200 focus:ring-2 focus:outline-none focus:ring-gray-100 font-sans rounded-full text-sm sm:text-md px-5 sm:px-10 py-2 text-center inline-flex items-center">
+                            <button type="submit" class="mt-8 border border-gray-300 bg-gray-800 bg-opacity-20 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+                                Отправить
+                            </button>
+                        </form>
 
-                        Вам туда
-                        <svg class="h-6 w-8 sm:h-8 sm:w-10 ml-2"  xmlns="http://www.w3.org/2000/svg" width="94" height="32" viewBox="0 0 94 32" fill="none">
-                            <path d="M77 1L93 16L77 31" stroke="white"/>
-                            <path d="M93 16L0 16" stroke="white"/> ></svg>
+                    </div>
 
-                    </a>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
 
 </body>
