--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -59,8 +59,8 @@
                 </a>
 
 
-                <a href="/extract" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
-                    Extract
+                <a href="/screenshot" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
+                    Screenshot
                 </a>
 
             </div>
@@ -72,12 +72,13 @@
                     </button>
                     <button id="overlay" class="hidden fixed z-10 inset-0 bg-gray-800 bg-opacity-20 backdrop-blur-sm"></button>
                     <div id="dropdown" class="absolute mt-1 right-0 opacity-0 z-10 transition-opacity duration-300 bg-gray-800 bg-opacity-40 border border-gray-200 rounded-3xl shadow-2xl">
-                        <p class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white bg-gradient-to-r from-blue-600 to-purple-500 VK-Sans rounded-t-3xl shadow-2xl">Привет, {{.userName}}!</p>
+                        <p class="block lg:hidden px-6 py-2 text-white text-center VK-Sans rounded-t-3xl shadow-2xl">Привет, <span class="font-extrabold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">{{.userName}}!</span>
+                        </p>
                         <a href="/convert" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Convert</a>
                         <a href="/cut" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Cut</a>
                         <a href="/watermark" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Watermark</a>
-                        <a href="/extract" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Extract</a>
-                        <a href="/profile" class="block px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 lg:rounded-t-3xl shadow-2xl">Profile</a>
+                        <a href="/screenshot" class="block lg:hidden px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 shadow-2xl">Screenshot</a>
+                        <a href="/profile" class="block px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-pink-500 hover:to-blue-600 lg:rounded-t-3xl shadow-2xl">Profile</a>
                         <a href="/signout" class="block px-6 py-2 text-center transition-opacity duration-300 text-white VK-Sans bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 rounded-b-3xl shadow-2xl">Sign Out</a>
                     </div>
 
@@ -91,34 +92,45 @@
 
     </nav>
     <div class="flex justify-center items-center h-full w-full">
-        <div class="rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-4  sm:px-10 sm:mb-8 sm:py-10 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
+        <div class="rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-4  sm:px-8 sm:mb-8 sm:py-10 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
             <div class="text-white VK-Sans">
-                <div class="mb-4 sm:mb-8 flex flex-col items-center">
-                    <img src="../static/assets/diggy2.webp" class="w-24 sm:w-32 md:w-40" alt="" />
-                    <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl text-center py-4 sm:py-6 md:py-9 VK-Sans">Dashboard</h1>
-                    <ul class="mb-2 ml-2 VK-Sans text-center">
-                        <li class="text-xs sm:text-sm indent-2">Очень рад видеть тебя здесь, {{.userName}}</li>
-                    </ul>
+                <div class=" mt-auto mb-4 sm:mb-8 flex flex-col items-center ">
+                    <img src="../static/assets/video-player.png" class="rounded-lg w-24 sm:w-34 md:w-64" alt="" />
+                    <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl text-center py-4 sm:py-6 md:py-9 VK-Sans"></h1>
 
-                    <ul class="mt-2 ml-2 VK-Sans text-center">
-                        <li class="text-xs sm:text-sm indent-2">Эта веб-страница находится на этапе разработки</li>
-                    </ul>
+                    <p
+                            class=" mb-2 ml-2 VK-Sans text-center ">
+                        Очень рад видеть тебя здесь, <span class=" font-extrabold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">{{.userName}}!</span>
 
-                    <ul class="mt-2 mb-2 VK-Sans py-2 text-center">
-                        <li class="text-xs sm:text-sm indent-2"> Нажми на кнопку, чтобы перейти на главную страницу</li>
-                    </ul>
 
-                    <a href="/dashboard" class="mt-4 sm:mt-8 VK-Sans text-white bg-gray-800 text-center bg-opacity-40 hover:bg-blue-700 border border-gray-200 focus:ring-2 focus:outline-none focus:ring-gray-100 font-sans rounded-full text-sm sm:text-md px-5 sm:px-10 py-2 text-center inline-flex items-center">
+                    </p>
 
-                        Вам туда
-                        <svg class="h-6 w-8 sm:h-8 sm:w-10 ml-2"  xmlns="http://www.w3.org/2000/svg" width="94" height="32" viewBox="0 0 94 32" fill="none">
-                            <path d="M77 1L93 16L77 31" stroke="white"/>
-                            <path d="M93 16L0 16" stroke="white"/> ></svg>
+                    <p
+                            class=" mt-2 mb-4 ml-2 VK-Sans text-center ">
+                        Этот сервис позволяет тебе <span class=" font-extrabold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">вырезать</span> /  <span class=" font-extrabold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">конвертировать</span>  / <span class=" font-extrabold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">ставить водяные знаки</span>  / <span class=" font-extrabold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">делать скриншоты</span> из твоих видео
 
-                    </a>
+                    </p>
+
+                    <p class="hidden lg:block mt-2 mb-2 ml-2 VK-Sans text-center md:text-wrap ">
+                        Выбери функцию, которую ты хочешь использовать <span class=" font-bold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">сверху</span>
+
+
+                    </p>
+
+                    <p
+                            class=" mb-2 ml-2 VK-Sans text-center lg:hidden ">
+                        Нажми на круглую кнопку в <span class="font-bold bg-gradient-to-r from-green-400 to-blue-500 bg-clip-text text-transparent">правом верхнем углу</span>  чтобы использовать нужную функцию
+
+
+                    </p>
+
+
                 </div>
+
             </div>
         </div>
+
+
     </div>
 </div>
 
