Working kafka Kafka Consumer and producer working

--- a/templates/convert.html
+++ b/templates/convert.html
@@ -140,7 +140,7 @@
                             <div id="error-message" class="hidden text-red-500 text-sm">Пожалуйста, выберите формат файла MP4</div>
 
                             <div class="text-white mt-4 ">
-                                <p >Выбери формат файла, в который вы хочешь преобразовать</p>
+                                <p >Выбери формат файла, в который хочешь преобразовать</p>
                                 <select name="output_format" class="mt-4 bg-gray-800 rounded-full bg-opacity-40 text-white border border-gray-300  py-2 px-4">
                                     <option value="" disabled selected>Формат выходного файла</option>
                                     <option value="mkv">Mkv</option>
