adding the editor
Adding the editor page (A page that let's the user check the video,
It also lets the user to enter the start and end time for the cut function

--- a/templates/cut_edit.html
+++ b/templates/cut_edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cut</title>
+    <title>Edit</title>
     <link href="../static/css/output.css" rel="stylesheet">
     <link rel="icon" href="/static/favicon/favicon.ico" type="image/x-icon">
     <script>
@@ -23,29 +23,6 @@
                 overlay.classList.add('hidden');
             });
 
-            const fileInput = document.getElementById('dropzone-file');
-            const errorMessage = document.getElementById('error-message');
-
-            fileInput.addEventListener('change', function() {
-                const file = this.files[0];
-                if (file && file.type === 'video/mp4') {
-                    errorMessage.classList.add('hidden');
-                } else {
-                    errorMessage.classList.remove('hidden');
-                    this.value = '';
-                }
-            });
-
-            document.getElementById('dropzone-file').addEventListener('change', function() {
-                var fileNameDisplay = document.getElementById('file-name');
-                if (this.files.length > 0) {
-                    // Display the file name if a file is selected
-                    fileNameDisplay.textContent = this.files[0].name;
-                } else {
-                    // Reset the text if no file is selected
-                    fileNameDisplay.textContent = 'No file chosen';
-                }
-            });
 
         });
 
@@ -124,17 +101,15 @@
                 <div class="mb-4 sm:mb-8 flex flex-col sm:flex-row items-center justify-between">
                     <div class="flex flex-col items-center justify-end mb-4 sm:mb-0">
                         <form action="/cut" method="post" enctype="multipart/form-data" class="flex flex-col items-center justify-center w-full">
-                            <label for="dropzone-file" class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-600 bg-gray-800 bg-opacity-20 border-dashed rounded-lg cursor-pointer">
-                                <div class="flex flex-col items-center justify-center pt-5 pb-6">
-                                    <svg class="w-8 h-8 mb-4 text-white " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"/>
-                                    </svg>
-                                    <p class="mb-2 text-sm text-white bg-opacity-40 px-4"><span class="font-semibold ml-4">Нажми или перетащи сюда</span>, чтобы загрузить</p>
-                                    <p class="text-xs ">MP4 (не более. 20MB)</p>
-                                </div>
-                                <input id="dropzone-file" type="file" name="file" class="hidden" />
-                                <p id="file-name" class="text-sm  mt-2">Файл не выбран</p>
-                            </label>
+                            <div class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-600 bg-gray-800 bg-opacity-20 border-dashed rounded-lg cursor-pointer">
+                                    <video id="Video" controls class="w-full h-full aspect-video">
+                                        <source src="../uploads/ad.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+
+
+
+                            </div>
 
 
                             <div id="error-message" class="hidden text-red-500 text-sm">Пожалуйста, выберите формат файла MP4</div>
