added the user interface
Added the user_interface for the cut and the convert page

Also added for the user interface for the  Watermark and the Screenshot page

--- a/templates/screenshot_success.html
+++ b/templates/screenshot_success.html
@@ -9,7 +9,7 @@
     <script>
         window.onload = function() {
             setTimeout(function() {
-                window.location.href = '/screenshot';
+                window.location.href = '/screenshot_edit';
             }, 2500);
         };
     </script>
