--- a/templates/cut_edit.html
+++ b/templates/cut_edit.html
@@ -11,6 +11,11 @@
             const button = document.querySelector('.group button');
             const dropdown = document.getElementById('dropdown');
             const overlay = document.getElementById('overlay');
+            const start_time=document.getElementById('start_time');
+            const end_time=document.getElementById('end_time');
+            const video_time_error=document.getElementById('time_error');
+            const video_duration= document.getElementById('Video')
+            const form= document.getElementById("video_form")
 
             button.addEventListener('click', function() {
                 console.log("Button clicked");
@@ -23,12 +28,63 @@
                 overlay.classList.add('hidden');
             });
 
+            start_time.addEventListener('change', function () {
+                var start = start_time.value;
+                if (!start.match(/^\d{2}:\d{2}(:\d{2})?$/)) {
+
+                    video_time_error.classList.remove('hidden');
+
+                }else {
+                    video_time_error.textContent=""
+                    var startSeconds = parseInt(start.split(':')[0]) * 60 + parseInt(start.split(':')[1]);
+                    var videoDurationSeconds = video_duration.duration;
+
+                    if (startSeconds > videoDurationSeconds) {
+                        // Show error if end time exceeds video duration or start time exceeds video duration
+                        video_time_error.classList.remove('hidden');
+                        video_time_error.textContent = "Время не может превышать продолжительность видео";
+                    } else {
+
+                        video_time_error.classList.add('hidden');
+                    }
+                }
+            });
+
+            end_time.addEventListener('change', function () {
+                var start = start_time.value;
+                var end = end_time.value;
+                if (!end.match(/^\d{2}:\d{2}(:\d{2})?$/)) {
+
+                    video_time_error.classList.remove('hidden');
+
+                }else {
+                    video_time_error.textContent=""
+                    var startSeconds = parseInt(start.split(':')[0]) * 60 + parseInt(start.split(':')[1]);
+                    var endSeconds = parseInt(end.split(':')[0]) * 60 + parseInt(end.split(':')[1]);
+                    var videoDurationSeconds = video_duration.duration;
+
+                    if (endSeconds<startSeconds){
+                        video_time_error.classList.remove('hidden');
+                        video_time_error.textContent = "Конец не может быть меньше начала";
+                    } else if(endSeconds> videoDurationSeconds) {
+                        video_time_error.textContent=""
+                        video_time_error.classList.remove('hidden');
+                        video_time_error.textContent = "Время не может превышать продолжительность видео";
+                    } else {
+
+                        video_time_error.classList.add('hidden');
+                    }
+                }
+            });
+
+
+
+
 
         });
 
 
     </script>
-
 
 </head>
 <body>
@@ -63,7 +119,7 @@
                 </a>
 
 
-                <a href="/" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
+                <a href="/screenshot" class="mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center inline-flex items-center">
                     Screenshot
                 </a>
 
@@ -98,27 +154,34 @@
         <div class="mt-3 rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-4 sm:px-10 sm:mb-8 sm:py-10 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
             <div class="text-white text-center VK-Sans">
                 <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl mb-8">Вырезать видео</h1>
+                <h1 class="mb-2 text-sm sm:text-sm md:text-sm ">Пожалуйста, введите время в формате ММ:СС, чтобы вырезать видео</h1>
                 <div class="mb-4 sm:mb-8 flex flex-col sm:flex-row items-center justify-between">
                     <div class="flex flex-col items-center justify-end mb-4 sm:mb-0">
-                        <form action="/cut" method="post" enctype="multipart/form-data" class="flex flex-col items-center justify-center w-full">
+                        <form id="video_form" action="/cut" method="post" enctype="multipart/form-data" class="flex flex-col items-center justify-center w-full">
                             <div class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-600 bg-gray-800 bg-opacity-20 border-dashed rounded-lg cursor-pointer">
                                     <video id="Video" controls class="w-full h-full aspect-video">
                                         <source src="../uploads/ad.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
-
-
-
                             </div>
 
 
                             <div id="error-message" class="hidden text-red-500 text-sm">Пожалуйста, выберите формат файла MP4</div>
 
+                            <div class="flex flex-row mt-4 space-x-14">
+                                <input type="text" id="start_time" class="rounded-3xl bg-gray-800 bg-opacity-30 border border-gray-200 text-white text-center p-2" placeholder="Начало">
+                                <input type="text" id="end_time" class="rounded-3xl bg-gray-800 bg-opacity-30 border border-gray-200 text-white text-center p-2" placeholder="Конец">
 
+
+                            </div>
+
+                            <p id="time_error" class="mt-2 text-red-500 hidden">Введите время в правильном формате!</p>
 
                             <button type="submit" class="mt-8 border border-gray-300 bg-gray-800 bg-opacity-20 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
                                 Вырезать
                             </button>
+
+
                         </form>
 
                     </div>
