--- a/templates/cut.html
+++ b/templates/cut.html
@@ -118,7 +118,7 @@
 
     </nav>
     <div class="flex justify-center items-center h-full w-full">
-        <div class="mt-3 rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-4 sm:px-10 sm:mb-8 sm:py-10 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
+        <div class="mt-3 rounded-3xl bg-gray-800 bg-opacity-40  sm:px-10 sm:mb-8 sm:py-10 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
             <div class="text-white text-center VK-Sans">
                 <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl mb-8">Вырезать видео</h1>
                 <div class="mb-4 sm:mb-8 flex flex-col sm:flex-row items-center justify-between">
