--- a/templates/screenshot.html
+++ b/templates/screenshot.html
@@ -142,7 +142,7 @@
 
 
                             <button type="submit" class="mt-8 border border-gray-300 bg-gray-800 bg-opacity-20 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
-                                Дальше!
+                                Дальше
                             </button>
                         </form>
 
