--- a/templates/watermark.html
+++ b/templates/watermark.html
@@ -135,7 +135,7 @@
 
     </nav>
     <div class="flex justify-center items-center h-full w-full">
-        <div class="mt-3 rounded-3xl bg-gray-800 bg-opacity-40 px-4 py-4 sm:px-10 sm:mb-8 sm:py-10 md:px-20 md:py-20 shadow-2xl backdrop-blur-md">
+        <div class="mt-3 rounded-3xl bg-gray-800 bg-opacity-40 sm:px-10 sm:mb-8 sm:py-10 md:px-14 md:py-10 shadow-2xl backdrop-blur-md">
             <div class="text-white text-center items-center VK-Sans">
                 <h1 class="mb-2 text-xl sm:text-2xl md:text-3xl mb-8">Водяной знак</h1>
                 <h1 class="mb-2 mt-2 text-sm text-center m-4">Загружите видео и файл который вы хотите использовать</h1>
@@ -163,7 +163,7 @@
 
 
                             <button type="submit" class="mt-8 border border-gray-300 bg-gray-800 bg-opacity-20 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
-                                 Готов!
+                                 Готов
                             </button>
                         </form>
 
